hphp/test/slow/xhp/xhpchild.php.expectf
1, vec(4) {
  int(1)
  int(2)
  int(3)
  int(4)
}

1, vec(4) {
  int(1)
  int(2)
  int(3)
  int(4)
}

1, string(15) "a boring string"

1, string(15) "a boring string"

1, string(11) "hello world"

1, string(11) "hello world"

1, int(10)

1, int(10)

1, float(-4.2)

1, float(-4.2)

1, object(xhp_div) (0) {
}

1, object(xhp_div) (0) {
}

0, NULL


Catchable fatal error: Argument 1 passed to f2() must implement interface XHPChild, null given in %s/test/slow/xhp/xhpchild.php on line 46